# micro-fab-llm

./: .gitignore  README.md  create_project_structure.sh  pyproject.toml  requirements.txt  train_requirements.txt
context/: micro-fab.md
micro_fab_llm/: __init__.py  merge_lora_gemma4.py  quantize_vlm.py  serve_llm.py  serve_vllm_llm.py  synthetic_defects.py  train_grpo.py
tests/: test_vlm_throughput.py
