[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-fab-llm"
version = "0.1.0"
description = "GPU-native Micro-Fab VLM (Gemma-4-E4B)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hieu Le" }
]
dependencies = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "unsloth==2026.5.2",
  "unsloth_zoo==2026.5.1",
  "trl==0.24.0",
  "peft==0.19.1",
  "accelerate==1.13.0",
  "bitsandbytes==0.49.2",
  "transformers==5.5.0",
  "datasets==4.3.0",
  "wandb==0.26.1",
  "xformers==0.0.32.post1",
  "opencv-python==4.13.0.92",
  "Pillow==12.2.0",
  "numpy==2.2.6",
  "vllm==0.11.0",
  "fastapi==0.136.1",
  "uvicorn==0.46.0",
  "pydantic==2.13.3",
  "aiohttp==3.13.5",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]
quantization = [
  "llmcompressor==0.10.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["micro_fab_llm*"]
